--- a/Nikola Rabrenovic - Praksa/DVG COMPANY SUBOTICA/scss/styles.css
+++ b/Nikola Rabrenovic - Praksa/DVG COMPANY SUBOTICA/scss/styles.css
@@ -7,7 +7,6 @@ body {
   margin-left: auto;
   margin-right: auto;
   width: 1440px;
-  height: 143px;
   left: 0px;
   top: 0px;
 }
@@ -15,11 +14,10 @@ body header {
   margin-left: auto;
   margin-right: auto;
   width: 1440px;
-  height: 143px;
   left: 0px;
   top: 0px;
 }
-body header .prvi {
+body header .firstDiv {
   background-color: rgb(217, 217, 217);
   display: flex;
   justify-content: space-between;
@@ -28,7 +26,7 @@ body header .prvi {
   padding-bottom: 14px;
   padding-right: 105px;
 }
-body header .prvi ul li {
+body header .firstDiv ul li {
   color: rgb(136, 135, 135);
   list-style: none;
   display: inline;
@@ -36,16 +34,35 @@ body header .prvi ul li {
   font-weight: 400;
   font-family: "Roboto";
 }
-body header .prvi ul #english, body header .prvi ul #magyar {
+body header .firstDiv ul #english, body header .firstDiv ul #magyar {
   color: rgb(89, 89, 89);
   text-decoration: underline;
 }
-body header .lista {
+body header .list {
   font-size: 16px;
 }
-body header .lista ul li {
-  display: inline;
-  align: center;
+body header .list ul {
+  display: flex;
+  justify-content: space-around;
+  font-family: "Roboto Condensed";
+  margin-left: 105px;
+  margin-right: 104px;
+}
+body header .list ul li {
+  border-left: 1px solid rgba(136, 135, 135, 0.4);
+  padding-top: 11px;
+  display: inline-block;
+  padding-left: 42px;
+}
+body header .list ul li span {
+  display: block;
+  font-size: 12px;
+  padding-bottom: 11px;
+  color: rgb(71, 71, 71);
+}
+body header .list ul .last {
+  border-right: 1px solid rgba(136, 135, 135, 0.4);
+  padding-right: 58px;
 }
 body .video {
   display: block;
@@ -56,17 +73,18 @@ body .video {
   left: 0px;
   top: 137px;
 }
-body .veleprodaja {
+body .sales {
   display: block;
   margin-left: auto;
   margin-right: auto;
   display: flex;
 }
-body .veleprodaja #veleprodaja {
+body .sales #veleprodaja {
   margin-top: 73px;
   align-items: center;
+  margin-bottom: 70px;
 }
-body .veleprodaja .dvg {
+body .sales .dvg {
   margin-left: auto;
   margin-right: auto;
   font-size: 42px;
@@ -76,7 +94,7 @@ body .veleprodaja .dvg {
   font-style: normal;
   margin-bottom: 22px;
 }
-body .veleprodaja .dvg2 {
+body .sales .dvg2 {
   font-size: 28px;
   font-family: "Inter";
   margin-right: 169px;
@@ -84,14 +102,15 @@ body .veleprodaja .dvg2 {
   margin-bottom: 37px;
   margin-top: 27px;
 }
-body .veleprodaja .dvg3 {
+body .sales .dvg3 {
   margin-right: 151px;
   margin-left: 55px;
   margin-top: 54px;
   font-size: 14px;
   line-height: 160%;
+  font-family: "Roboto";
 }
-body .veleprodaja .dugme1 {
+body .sales .btn1 {
   margin-top: 40px;
   margin-bottom: 67px;
   padding: 15px;
@@ -104,149 +123,167 @@ body .veleprodaja .dugme1 {
   font-family: "Arial";
   font-weight: 500;
 }
-body .veleprodaja .linija {
+body .sales .line {
   margin-left: 55px;
 }
-body .veleprodaja .linija2 {
+body .sales .line2 {
   margin-left: 55px;
 }
-body .slike {
+
+.pictures {
   margin-top: 74px;
   display: flex;
   margin-left: 104px;
 }
-body .slike div {
+.pictures div {
   margin-left: 15px;
 }
-body .slike p {
+.pictures p {
   font-size: 24px;
   font-family: "Roboto";
 }
-body .slike .linija3 {
+.pictures .line3 {
   margin-bottom: 148px;
 }
-body .brojke h1 {
+
+.numbers h1 {
   font-size: 42px;
   font-style: "Roboto";
   text-align: center;
 }
-body .brojke .company2 {
+.numbers .company2 {
   font-size: 28px;
   text-align: center;
+  margin-bottom: 32px;
 }
-body .brojke .linija4 {
+.numbers .linija4 {
   display: block;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 93px;
 }
-body .brojke .container {
+.numbers .container {
   position: relative;
   text-align: center;
   color: white;
 }
-body .brojke .container .first {
+.numbers .container .first {
   position: absolute;
-  bottom: 169px;
+  bottom: 119px;
   left: 163px;
   font-family: "Inter";
   font-style: normal;
   font-weight: 900;
   font-size: 46px;
+  border-right: 1px solid rgba(255, 255, 255, 0.2);
+  padding-right: 94px;
+  padding-top: 52px;
+  padding-bottom: 26px;
 }
-body .brojke .container .second {
+.numbers .container .first span {
+  display: block;
+  font-size: 18px;
+  font-weight: 400;
+}
+.numbers .container .second {
   position: absolute;
-  bottom: 169px;
+  bottom: 119px;
   left: 536px;
   font-family: "Inter";
   font-style: normal;
   font-weight: 900;
   font-size: 46px;
+  border-right: 1px solid rgba(255, 255, 255, 0.2);
+  padding-right: 131px;
+  padding-top: 52px;
+  padding-bottom: 26px;
 }
-body .brojke .container .third {
+.numbers .container .second span {
+  display: block;
+  font-size: 18px;
+  font-weight: 400;
+}
+.numbers .container .third {
   position: absolute;
-  bottom: 169px;
+  bottom: 119px;
   left: 859px;
   font-family: "Inter";
   font-style: normal;
   font-weight: 900;
   font-size: 46px;
+  border-right: 1px solid rgba(255, 255, 255, 0.2);
+  padding-right: 103px;
+  padding-top: 52px;
+  padding-bottom: 26px;
 }
-body .brojke .container .fourth {
+.numbers .container .third span {
+  display: block;
+  font-size: 18px;
+  font-weight: 400;
+}
+.numbers .container .fourth {
   position: absolute;
-  bottom: 169px;
+  bottom: 119px;
   left: 1149px;
   font-family: "Inter";
   font-style: normal;
   font-weight: 900;
   font-size: 46px;
+  padding-bottom: 26px;
 }
-body .brojke .container .fifth {
-  position: absolute;
-  bottom: 129px;
-  left: 163px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 400;
+.numbers .container .fourth span {
+  display: block;
   font-size: 18px;
-}
-body .brojke .container .sixth {
-  position: absolute;
-  bottom: 129px;
-  left: 536px;
-  font-family: "Inter";
-  font-style: normal;
   font-weight: 400;
-  font-size: 18px;
 }
-body .brojke .container .seventh {
-  position: absolute;
-  bottom: 129px;
-  left: 859px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
+
+.proizvodi {
+  background: #F4F4F4;
+  padding-top: 92px;
 }
-body .brojke .container .eight {
-  position: absolute;
-  bottom: 129px;
-  left: 1149px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-}
-body .proizvodi h1 {
+.proizvodi h1 {
   font-weight: 400;
   font-size: 28px;
-  margin-top: 139px;
   margin-bottom: 60px;
   text-align: center;
+  font-family: "Inter";
+  border-bottom: 3px solid rgba(196, 196, 196, 0.4);
+  margin-left: 457px;
+  margin-right: 459px;
+  padding-bottom: 60px;
 }
-body .proizvodi p {
+.proizvodi #paragraph {
   text-align: center;
   margin-left: 457px;
   margin-right: 457px;
   margin-bottom: 60px;
 }
-body .proizvodi .container2 {
-  display: flex;
-  justify-content: space-around;
+.proizvodi .container2 {
+  margin: auto;
 }
-body .brendovi p {
+.proizvodi .container2 .center2 {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+.brands p {
   font-size: 28px;
   font-weight: 400px;
   text-align: center;
   margin-left: 467px;
   margin-right: 467px;
+  border-bottom: 3px solid rgba(196, 196, 196, 0.4);
+  padding-bottom: 44px;
+  padding-top: 83px;
 }
-body .brendovi .center {
+.brands .center {
   margin-left: auto;
   margin-right: auto;
   display: block;
+  padding-top: 37px;
 }
-body .brendovi .dugme2 {
+.brands .btn2 {
   padding: 15px;
   font-size: 16px;
   color: white;
@@ -256,4 +293,90 @@ body .brendovi .dugme2 {
   border-radius: 4px;
   font-family: "Arial";
   font-weight: 500;
+  margin-left: 590px;
+  margin-top: 75px;
+  margin-bottom: 75px;
+}
+
+.end {
+  background-image: url(../img/pozadina_footer.png);
+}
+.end .end-child {
+  display: flex;
+}
+.end .end-child .logoDonji {
+  margin-top: 86px;
+  margin-left: 218px;
+  border-right: 1px solid rgba(255, 255, 255, 0.26);
+  padding-right: 70px;
+}
+.end .end-child .company {
+  font-size: 28px;
+  color: rgb(255, 255, 255);
+  margin-top: 86px;
+  margin-left: 47px;
+  padding-right: 173px;
+  border-right: 1px solid rgba(255, 255, 255, 0.26);
+}
+.end .end-child .company #put {
+  font-size: 14px;
+}
+.end .end-child .list2 {
+  margin-top: 82px;
+  padding-left: 19px;
+  line-height: 26px;
+  border-right: 1px solid rgba(255, 255, 255, 0.26);
+  padding-right: 139px;
+}
+.end .end-child .list2 ul li {
+  list-style: none;
+  color: rgb(255, 255, 255);
+}
+.end .end-child .contact {
+  color: rgb(255, 255, 255);
+  padding-top: 82px;
+  padding-left: 22px;
+}
+.end .end-child .contact #fb {
+  padding-top: 18.5px;
+  padding-right: 20px;
+}
+.end .end-child .contact #tw {
+  padding-right: 17px;
+}
+.end .end-child .contact #yt {
+  padding-right: 18px;
+}
+.end .end-child2 {
+  margin-top: 33px;
+  color: rgba(255, 255, 255, 0.3);
+  padding-top: 25px;
+  padding-left: 65px;
+  display: flex;
+  padding-bottom: 24px;
+}
+.end .end-child2 #private {
+  padding-left: 163px;
+  color: rgba(255, 255, 255, 0.5);
+}
+.end .end-child2 #conditions {
+  padding-left: 67px;
+  color: rgba(255, 255, 255, 0.5);
+}
+.end .end-child2 #powered {
+  padding-left: 152px;
+}
+.end .end-child2 #powered span {
+  color: rgba(255, 255, 255, 0.5);
+}
+.end #overlay {
+  width: 95.5%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.33);
+  z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+  cursor: pointer; /* Add a pointer on hover */
 }/*# sourceMappingURL=styles.css.map */
