--- a/Nikola Rabrenovic - Praksa/DVG COMPANY SUBOTICA/scss/styles.css
+++ b/Nikola Rabrenovic - Praksa/DVG COMPANY SUBOTICA/scss/styles.css
@@ -21,18 +21,18 @@ body header .firstDiv {
   background-color: rgb(217, 217, 217);
   display: flex;
   justify-content: space-between;
-  padding-left: 105px;
-  padding-top: 17px;
-  padding-bottom: 14px;
-  padding-right: 105px;
+  padding-left: 104px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding-right: 104px;
 }
 body header .firstDiv ul li {
   color: rgb(136, 135, 135);
   list-style: none;
   display: inline;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 400;
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
 }
 body header .firstDiv ul #english, body header .firstDiv ul #magyar {
   color: rgb(89, 89, 89);
@@ -44,25 +44,28 @@ body header .list {
 body header .list ul {
   display: flex;
   justify-content: space-around;
-  font-family: "Roboto Condensed";
-  margin-left: 105px;
+  font-family: "Roboto Condensed", sans-serif;
+  margin-left: 104px;
   margin-right: 104px;
 }
 body header .list ul li {
   border-left: 1px solid rgba(136, 135, 135, 0.4);
-  padding-top: 11px;
+  padding-top: 8px;
   display: inline-block;
-  padding-left: 42px;
+  padding-left: 40px;
 }
 body header .list ul li span {
   display: block;
   font-size: 12px;
-  padding-bottom: 11px;
+  padding-bottom: 8px;
   color: rgb(71, 71, 71);
 }
 body header .list ul .last {
   border-right: 1px solid rgba(136, 135, 135, 0.4);
-  padding-right: 58px;
+  padding-right: 56px;
+}
+body header .list ul .hamburger {
+  display: none;
 }
 body .video {
   display: block;
@@ -71,7 +74,7 @@ body .video {
   width: 1440px;
   height: 705px;
   left: 0px;
-  top: 137px;
+  top: 136px;
 }
 body .sales {
   display: block;
@@ -80,75 +83,75 @@ body .sales {
   display: flex;
 }
 body .sales #veleprodaja {
-  margin-top: 73px;
+  margin-top: 72px;
   align-items: center;
-  margin-bottom: 70px;
+  margin-bottom: 72px;
 }
 body .sales .dvg {
   margin-left: auto;
   margin-right: auto;
-  font-size: 42px;
-  margin-top: 121px;
-  margin-left: 55px;
-  font-family: "Roboto";
+  font-size: 40px;
+  margin-top: 64px;
+  margin-left: 56px;
+  font-family: "Roboto", sans-serif;
   font-style: normal;
-  margin-bottom: 22px;
+  margin-bottom: 24px;
 }
 body .sales .dvg2 {
-  font-size: 28px;
+  font-size: 32px;
   font-family: "Inter";
-  margin-right: 169px;
-  margin-left: 55px;
-  margin-bottom: 37px;
-  margin-top: 27px;
+  margin-right: 168px;
+  margin-left: 56px;
+  margin-bottom: 40px;
+  margin-top: 24px;
 }
 body .sales .dvg3 {
-  margin-right: 151px;
-  margin-left: 55px;
-  margin-top: 54px;
+  margin-right: 152px;
+  margin-left: 56px;
+  margin-top: 56px;
   font-size: 14px;
   line-height: 160%;
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
 }
 body .sales .btn1 {
-  margin-top: 40px;
-  margin-bottom: 67px;
-  padding: 15px;
   font-size: 16px;
   color: white;
   background-color: rgb(191, 15, 15);
-  margin-left: 55px;
   border: none;
   border-radius: 4px;
   font-family: "Arial";
   font-weight: 500;
+  margin-top: 40px;
+  margin-bottom: 64px;
+  padding: 16px;
+  margin-left: 56px;
 }
 body .sales .line {
-  margin-left: 55px;
+  margin-left: 56px;
 }
 body .sales .line2 {
-  margin-left: 55px;
+  margin-left: 56px;
 }
 
 .pictures {
-  margin-top: 74px;
+  margin-top: 72px;
   display: flex;
   margin-left: 104px;
 }
 .pictures div {
-  margin-left: 15px;
+  margin-left: 16px;
 }
 .pictures p {
   font-size: 24px;
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
 }
 .pictures .line3 {
-  margin-bottom: 148px;
+  margin-bottom: 152px;
 }
 
 .numbers h1 {
   font-size: 42px;
-  font-style: "Roboto";
+  font-family: "Roboto", sans-serif;
   text-align: center;
 }
 .numbers .company2 {
@@ -156,11 +159,11 @@ body .sales .line2 {
   text-align: center;
   margin-bottom: 32px;
 }
-.numbers .linija4 {
+.numbers .line4 {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 93px;
+  margin-bottom: 96px;
 }
 .numbers .container {
   position: relative;
@@ -169,16 +172,16 @@ body .sales .line2 {
 }
 .numbers .container .first {
   position: absolute;
-  bottom: 119px;
-  left: 163px;
+  bottom: 120px;
+  left: 160px;
   font-family: "Inter";
   font-style: normal;
   font-weight: 900;
   font-size: 46px;
   border-right: 1px solid rgba(255, 255, 255, 0.2);
-  padding-right: 94px;
-  padding-top: 52px;
-  padding-bottom: 26px;
+  padding-right: 96px;
+  padding-top: 56px;
+  padding-bottom: 24px;
 }
 .numbers .container .first span {
   display: block;
@@ -187,16 +190,16 @@ body .sales .line2 {
 }
 .numbers .container .second {
   position: absolute;
-  bottom: 119px;
+  bottom: 120px;
   left: 536px;
   font-family: "Inter";
   font-style: normal;
   font-weight: 900;
   font-size: 46px;
   border-right: 1px solid rgba(255, 255, 255, 0.2);
-  padding-right: 131px;
-  padding-top: 52px;
-  padding-bottom: 26px;
+  padding-right: 128px;
+  padding-top: 56px;
+  padding-bottom: 24px;
 }
 .numbers .container .second span {
   display: block;
@@ -205,16 +208,16 @@ body .sales .line2 {
 }
 .numbers .container .third {
   position: absolute;
-  bottom: 119px;
-  left: 859px;
+  bottom: 120px;
+  left: 856px;
   font-family: "Inter";
   font-style: normal;
   font-weight: 900;
   font-size: 46px;
   border-right: 1px solid rgba(255, 255, 255, 0.2);
-  padding-right: 103px;
-  padding-top: 52px;
-  padding-bottom: 26px;
+  padding-right: 104px;
+  padding-top: 56px;
+  padding-bottom: 24px;
 }
 .numbers .container .third span {
   display: block;
@@ -223,13 +226,13 @@ body .sales .line2 {
 }
 .numbers .container .fourth {
   position: absolute;
-  bottom: 119px;
-  left: 1149px;
+  bottom: 120px;
+  left: 1152px;
   font-family: "Inter";
   font-style: normal;
   font-weight: 900;
   font-size: 46px;
-  padding-bottom: 26px;
+  padding-bottom: 24px;
 }
 .numbers .container .fourth span {
   display: block;
@@ -237,65 +240,132 @@ body .sales .line2 {
   font-weight: 400;
 }
 
-.proizvodi {
+.products {
   background: #F4F4F4;
-  padding-top: 92px;
+  padding-top: 96px;
 }
-.proizvodi h1 {
+.products h1 {
   font-weight: 400;
   font-size: 28px;
-  margin-bottom: 60px;
+  margin-bottom: 64px;
   text-align: center;
   font-family: "Inter";
   border-bottom: 3px solid rgba(196, 196, 196, 0.4);
-  margin-left: 457px;
-  margin-right: 459px;
-  padding-bottom: 60px;
+  margin-left: 456px;
+  margin-right: 456px;
+  padding-bottom: 64px;
 }
-.proizvodi #paragraph {
+.products #paragraph {
   text-align: center;
-  margin-left: 457px;
-  margin-right: 457px;
-  margin-bottom: 60px;
+  margin-left: 456px;
+  margin-right: 456px;
+  margin-bottom: 64px;
 }
-.proizvodi .container2 {
-  margin: auto;
+.products .container2 .center2 {
+  position: relative;
+  display: flex;
+  justify-content: space-around;
+  margin-left: 112px;
+  margin-right: 112px;
 }
-.proizvodi .container2 .center2 {
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
+.products .container2 .center2 .kese {
+  position: absolute;
+  font-size: 24px;
+  left: 45px;
+  bottom: 50px;
+}
+.products .container2 .center2 .kuhinja {
+  position: absolute;
+  font-size: 24px;
+  left: 295px;
+  bottom: 50px;
+}
+.products .container2 .center2 .ubrusi {
+  position: absolute;
+  font-size: 24px;
+  left: 525px;
+  bottom: 22px;
+}
+.products .container2 .center2 .kozmetika {
+  position: absolute;
+  font-size: 24px;
+  left: 775px;
+  bottom: 50px;
+}
+.products .container2 .center2 .kante {
+  position: absolute;
+  font-size: 24px;
+  left: 1025px;
+  bottom: 22px;
+}
+.products .container2 .center2 .linija5 {
+  position: absolute;
+  left: 45px;
+  bottom: 50px;
+}
+.products .container2 .center2 .linija6 {
+  position: absolute;
+  left: 295px;
+  bottom: 50px;
+}
+.products .container2 .center2 .linija7 {
+  position: absolute;
+  left: 525px;
+  bottom: 22px;
+}
+.products .container2 .center2 .linija8 {
+  position: absolute;
+  left: 775px;
+  bottom: 50px;
+}
+.products .container2 .center2 .linija9 {
+  position: absolute;
+  left: 1025px;
+  bottom: 22px;
+}
+.products .container2 .center2 .left {
+  position: absolute;
+  left: -90px;
+  bottom: 130px;
+  border: none;
+  background-color: transparent;
+}
+.products .container2 .center2 .right {
+  position: absolute;
+  left: 1248px;
+  bottom: 130px;
+  border: none;
+  background-color: transparent;
 }
 
 .brands p {
   font-size: 28px;
   font-weight: 400px;
   text-align: center;
-  margin-left: 467px;
-  margin-right: 467px;
+  margin-left: 464px;
+  margin-right: 464px;
   border-bottom: 3px solid rgba(196, 196, 196, 0.4);
-  padding-bottom: 44px;
-  padding-top: 83px;
+  padding-bottom: 48px;
+  padding-top: 80px;
 }
 .brands .center {
   margin-left: auto;
   margin-right: auto;
   display: block;
-  padding-top: 37px;
+  padding-top: 40px;
 }
 .brands .btn2 {
-  padding: 15px;
   font-size: 16px;
   color: white;
   background-color: rgb(191, 15, 15);
-  margin-left: 55px;
   border: none;
   border-radius: 4px;
   font-family: "Arial";
   font-weight: 500;
-  margin-left: 590px;
-  margin-top: 75px;
-  margin-bottom: 75px;
+  padding: 16px;
+  margin-left: 592px;
+  margin-top: 80px;
+  margin-bottom: 80px;
 }
 
 .end {
@@ -304,29 +374,29 @@ body .sales .line2 {
 .end .end-child {
   display: flex;
 }
-.end .end-child .logoDonji {
-  margin-top: 86px;
-  margin-left: 218px;
+.end .end-child .logoLast {
+  margin-top: 80px;
+  margin-left: 216px;
   border-right: 1px solid rgba(255, 255, 255, 0.26);
-  padding-right: 70px;
+  padding-right: 72px;
 }
 .end .end-child .company {
   font-size: 28px;
   color: rgb(255, 255, 255);
-  margin-top: 86px;
-  margin-left: 47px;
-  padding-right: 173px;
+  margin-top: 88px;
+  margin-left: 48px;
+  padding-right: 176px;
   border-right: 1px solid rgba(255, 255, 255, 0.26);
 }
 .end .end-child .company #put {
   font-size: 14px;
 }
 .end .end-child .list2 {
-  margin-top: 82px;
-  padding-left: 19px;
-  line-height: 26px;
+  margin-top: 80px;
+  padding-left: 16px;
+  line-height: 24px;
   border-right: 1px solid rgba(255, 255, 255, 0.26);
-  padding-right: 139px;
+  padding-right: 136px;
 }
 .end .end-child .list2 ul li {
   list-style: none;
@@ -334,33 +404,33 @@ body .sales .line2 {
 }
 .end .end-child .contact {
   color: rgb(255, 255, 255);
-  padding-top: 82px;
-  padding-left: 22px;
+  padding-top: 80px;
+  padding-left: 24px;
 }
 .end .end-child .contact #fb {
-  padding-top: 18.5px;
-  padding-right: 20px;
+  padding-top: 16px;
+  padding-right: 16px;
 }
 .end .end-child .contact #tw {
-  padding-right: 17px;
+  padding-right: 16px;
 }
 .end .end-child .contact #yt {
-  padding-right: 18px;
+  padding-right: 16px;
 }
 .end .end-child2 {
-  margin-top: 33px;
+  margin-top: 32px;
   color: rgba(255, 255, 255, 0.3);
-  padding-top: 25px;
-  padding-left: 65px;
+  padding-top: 24px;
+  padding-left: 64px;
   display: flex;
   padding-bottom: 24px;
 }
 .end .end-child2 #private {
-  padding-left: 163px;
+  padding-left: 160px;
   color: rgba(255, 255, 255, 0.5);
 }
 .end .end-child2 #conditions {
-  padding-left: 67px;
+  padding-left: 64px;
   color: rgba(255, 255, 255, 0.5);
 }
 .end .end-child2 #powered {
@@ -379,4 +449,34 @@ body .sales .line2 {
   background-color: rgba(0, 0, 0, 0.33);
   z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
   cursor: pointer; /* Add a pointer on hover */
+}
+
+@media screen and (min-width: 1025px) {
+  .hamburger {
+    display: flex;
+  }
+}
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .hamburger {
+    display: flex !important;
+  }
+  .listItem {
+    display: none !important;
+  }
+}
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .hamburger {
+    display: flex !important;
+  }
+  .listItem {
+    display: none !important;
+  }
+}
+@media screen and (max-width: 480px) {
+  .hamburger {
+    display: flex !important;
+  }
+  .listItem {
+    display: none !important;
+  }
 }/*# sourceMappingURL=styles.css.map */
