--- a/Nikola Rabrenovic - Praksa/DVG COMPANY SUBOTICA/scss/styles.scss
+++ b/Nikola Rabrenovic - Praksa/DVG COMPANY SUBOTICA/scss/styles.scss
@@ -1,20 +1,5 @@
-@media screen and (min-width: 1025) {
-    *{
-      
-    }
-}
-
-@media screen and (min-width: 769px) and (max-width:1024px) {
-    *{
-      
-    }
-}
-
-@media screen and (min-width: 480px) and (max-width:768px) {
-    *{
-      
-    }
-}
+@import 'vars';
+@import 'mixins';
 
 
 
@@ -40,19 +25,19 @@ body{
             background-color: rgba(217, 217, 217, 1);
             display: flex;
             justify-content: space-between;
-            padding-left: 105px;
-            padding-top: 17px;
-            padding-bottom: 14px;
-            padding-right: 105px;
+            padding-left: $value*13;
+            padding-top: $value*2;
+            padding-bottom: $value*2;
+            padding-right: $value*13;
 
                 ul{
                     li{
                         color: rgba(136, 135, 135, 1);
                         list-style: none;
                         display: inline;
-                        font-size: 14px;
+                        font-size: $value*2;
                         font-weight: 400;
-                        font-family: 'Roboto';
+                        font-family:'Roboto', sans-serif;
                     }
                     #english,#magyar{
                         color: rgba(89, 89, 89, 1);
@@ -62,23 +47,23 @@ body{
             
         }
         .list{
-            font-size: 16px;
+            font-size: $value*2;
            
             ul{
                 display: flex;
                 justify-content: space-around;
-                font-family: 'Roboto Condensed';
-                margin-left: 105px;
-                margin-right: 104px;
+                font-family: 'Roboto Condensed', sans-serif;
+                margin-left: $value*13;
+                margin-right: $value*13;
                 li{
                     border-left: 1px solid rgba(136, 135, 135, 0.4);
-                    padding-top: 11px;
+                    padding-top:$value;
                     display: inline-block;
-                    padding-left: 42px;
+                    padding-left: $value*5;
                     span{
                         display: block;
                         font-size: 12px;
-                        padding-bottom: 11px;
+                        padding-bottom: $value;
                         color:rgba(71, 71, 71, 1);
                         ;
                     }
@@ -86,8 +71,11 @@ body{
                 }
                 .last{
                     border-right: 1px solid rgba(136, 135, 135, 0.4);
-                    padding-right: 58px;
+                    padding-right: $value*7;
                 }   
+                .hamburger{
+                    display:none;
+                }
             }
 
         }
@@ -99,7 +87,7 @@ body{
         width: 1440px;
         height: 705px;
         left: 0px;
-        top: 137px;
+        top: $value*17;
     }
     .sales{
         display: block;
@@ -107,89 +95,83 @@ body{
         margin-right: auto;
         display: flex;
         #veleprodaja{
-            margin-top: 73px;
+            margin-top: $value*9;
             align-items: center;
-            margin-bottom: 70px;
+            margin-bottom: $value*9;
         }
         .dvg{
             margin-left: auto;
-        margin-right: auto;
-            font-size:42px;
-            margin-top: 121px;
-            margin-left: 55px;
-            font-family: 'Roboto';
+            margin-right: auto;
+            font-size:$value*5;
+            margin-top: $value*8;
+            margin-left: $value*7;
+            font-family:'Roboto', sans-serif;
             font-style: normal;
-            margin-bottom: 22px;
+            margin-bottom: $value*3;
         }
         .dvg2{
-            font-size: 28px;
+            font-size: $value*4;
             font-family: 'Inter';
-            margin-right: 169px;
-            margin-left: 55px;
-            margin-bottom: 37px;
-            margin-top: 27px;
+            margin-right: $value*21;
+            margin-left: $value*7;
+            margin-bottom: $value*5;
+            margin-top: $value*3;
 
         }
         .dvg3{
-            margin-right: 151px;
-            margin-left: 55px;
-            margin-top: 54px;
+            margin-right: $value*19;
+            margin-left: $value*7;
+            margin-top: $value*7;
             font-size: 14px;
             line-height: 160%;
-            font-family: 'Roboto';
+            font-family:'Roboto', sans-serif;
         }
         .btn1{
-            margin-top: 40px;
-            margin-bottom: 67px;
-            padding:15px;
-            font-size: 16px;
-            color:white;
-            background-color: rgba(191, 15, 15, 1);
-            margin-left: 55px;
-            border: none;
-            border-radius: 4px;
-            font-family: 'Arial';
-            font-weight: 500;
+            @include button;
+            margin-top: $value*5;
+            margin-bottom: $value*8;
+            padding:$value*2;
+            margin-left: $value*7;
         }
         .line{
-            margin-left: 55px;
+            margin-left: $value*7;
         }
         .line2{
-            margin-left: 55px;
+            margin-left: $value*7;
         }
     }
     }
     .pictures{
-        margin-top: 74px;
+        margin-top: $value*9;
         display: flex;
-        margin-left: 104px;
+        margin-left: $value*13;
         div{
-            margin-left: 15px;
+            margin-left: $value*2;
         }
         p{
             font-size: 24px;
-            font-family: 'Roboto';
+            font-family:'Roboto', sans-serif;
         }
         .line3{
-            margin-bottom: 148px;
+            margin-bottom: $value*19;
         }
     }
     .numbers{
         h1{
             font-size: 42px;
-            font-style: 'Roboto';
+            font-family:'Roboto', sans-serif;
             text-align: center;
         }
         .company2{
             font-size: 28px;
             text-align: center;
-            margin-bottom: 32px;
+            margin-bottom: $value*4;
         }
-        .linija4{
+        .line4{
             display: block;
             margin-left: auto;
             margin-right: auto;
-            margin-bottom: 93px;
+            margin-bottom: $value*12;
         }
         .container {
             position: relative;
@@ -197,16 +179,16 @@ body{
             color: white;
             .first{
                 position: absolute;
-                bottom: 119px;
-                left: 163px;
+                bottom: $value*15;
+                left: $value*20;
                 font-family: 'Inter';
                 font-style: normal;
                 font-weight: 900;
                 font-size: 46px;
                 border-right: 1px solid rgba(255, 255, 255, 0.2);
-                padding-right: 94px;
-                padding-top: 52px;
-                padding-bottom: 26px;
+                padding-right: $value*12;
+                padding-top: $value*7;
+                padding-bottom: $value*3;
                 span{
                     display: block;
                     font-size: 18px;
@@ -215,16 +197,16 @@ body{
             }
             .second{
                 position: absolute;
-                bottom: 119px;
-                left: 536px;
+                bottom: $value*15;
+                left: $value*67;
                 font-family: 'Inter';
                 font-style: normal;
                 font-weight: 900;
                 font-size: 46px;
                 border-right: 1px solid rgba(255, 255, 255, 0.2);
-                padding-right: 131px;
-                padding-top: 52px;
-                padding-bottom: 26px;
+                padding-right: $value*16;
+                padding-top: $value*7;
+                padding-bottom: $value*3;
                 span{
                     display: block;
                     font-size: 18px;
@@ -233,16 +215,16 @@ body{
             }
             .third{
                 position: absolute;
-                bottom: 119px;
-                left: 859px;
+                bottom: $value*15;
+                left: $value*107;
                 font-family: 'Inter';
                 font-style: normal;
                 font-weight: 900;
                 font-size: 46px;
                 border-right: 1px solid rgba(255, 255, 255, 0.2);
-                padding-right: 103px;
-                padding-top: 52px;
-                padding-bottom: 26px;
+                padding-right: $value*13;
+                padding-top: $value*7;
+                padding-bottom: $value*3;
                 span{
                     display: block;
                     font-size: 18px;
@@ -251,13 +233,13 @@ body{
             }
             .fourth{
                 position: absolute;
-                bottom: 119px;
-                left: 1149px;
+                bottom: $value*15;
+                left: $value*144;
                 font-family: 'Inter';
                 font-style: normal;
                 font-weight: 900;
                 font-size: 46px;
-                padding-bottom: 26px;
+                padding-bottom: $value*3;
                 span{
                     display: block;
                     font-size: 18px;
@@ -266,34 +248,107 @@ body{
             }
           }
     }
-    .proizvodi{
+    .products{
         background: #F4F4F4;
-        padding-top: 92px;
+        padding-top: $value*12;
         h1{
             font-weight: 400;
             font-size: 28px;
-            margin-bottom: 60px;
+            margin-bottom: $value*8;
             text-align: center;
             font-family: 'Inter';
             border-bottom: 3px solid rgba(196, 196, 196, 0.4);
-            margin-left: 457px;
-            margin-right: 459px;
-            padding-bottom: 60px;
+            margin-left: $value*57;
+            margin-right: $value*57;
+            padding-bottom: $value*8;
         }
         #paragraph{
             text-align: center;
-            margin-left: 457px;
-            margin-right: 457px;
-            margin-bottom: 60px;
+            margin-left: $value*57;
+            margin-right: $value*57;
+            margin-bottom: $value*8;
             
         }
         .container2{
-               margin: auto;
-               .center2{
-                margin-left: auto;
-                margin-right: auto;
-                display: block;
-               }
+            .center2{
+            position: relative;
+            display: flex;      
+            justify-content: space-around;
+            margin-left: $value*14;
+            margin-right: $value*14;
+            img{
+        
+            }
+            .kese{
+                position:absolute;
+                font-size: $value*3;
+                left:45px;
+                bottom: 50px;
+            }
+            .kuhinja{
+                position:absolute;
+                font-size: $value*3;
+                left:295px;
+                bottom:50px;
+            }
+            .ubrusi{
+                position:absolute;
+                font-size: $value*3;
+                left:525px;
+                bottom:22px;
+            }
+            .kozmetika{
+                position:absolute;
+                font-size: $value*3;
+                left:775px;
+                bottom:50px;
+            }
+            .kante{
+                position:absolute;
+                font-size: $value*3;
+                left:1025px;
+                bottom:22px;
+            }
+            .linija5{
+                position:absolute;
+                left:45px;
+                bottom: 50px;
+            }
+            .linija6{
+                position:absolute;
+                left:295px;
+                bottom:50px;
+            }
+            .linija7{
+                position:absolute;
+                left:525px;
+                bottom:22px;
+            }
+            .linija8{
+                position:absolute;
+                left:775px;
+                bottom:50px;
+            }
+            .linija9{
+                position:absolute;
+                left:1025px;
+                bottom:22px;
+            }
+            .left{
+                position:absolute;
+                left:-90px;
+                bottom: 130px;
+                border:none;
+                background-color: transparent;
+            }
+            .right{
+                position:absolute;
+                left:1248px;
+                bottom:130px;
+                border:none;
+                background-color: transparent;
+            }
+              }
             }
         }
     
@@ -302,31 +357,24 @@ body{
             font-size: 28px;
             font-weight: 400px;
             text-align: center;
-            margin-left: 467px;
-            margin-right: 467px;
+            margin-left: $value*58;
+            margin-right: $value*58;
             border-bottom: 3px solid rgba(196, 196, 196, 0.4);
-            padding-bottom: 44px;
-            padding-top: 83px;
+            padding-bottom: $value*6;
+            padding-top: $value*10;
         }
         .center{
             margin-left: auto;
             margin-right: auto;
             display: block;
-            padding-top: 37px;
+            padding-top: $value*5;
         }
         .btn2{
-            padding:15px;
-            font-size: 16px;
-            color:white;
-            background-color: rgba(191, 15, 15, 1);
-            margin-left: 55px;
-            border: none;
-            border-radius: 4px;
-            font-family: 'Arial';
-            font-weight: 500;
-            margin-left: 590px;
-            margin-top: 75px;
-            margin-bottom: 75px;
+            @include button;
+            padding:$value*2;
+            margin-left: $value*74;
+            margin-top: $value*10;
+            margin-bottom: $value*10;
         }
         
     }
@@ -334,29 +382,29 @@ body{
       background-image: url(../img/pozadina_footer.png);
         .end-child{
             display: flex;
-            .logoDonji{
-                margin-top: 86px;
-                margin-left: 218px;
+            .logoLast{
+                margin-top: $value*10;
+                margin-left: $value*27;
                 border-right: 1px solid rgba(255, 255, 255, 0.26);
-                padding-right: 70px;
+                padding-right: $value*9;
             }
             .company{
                 font-size: 28px;
                 color:rgba(255, 255, 255, 1);
-                margin-top: 86px;
-                margin-left: 47px;
-                padding-right: 173px;
+                margin-top: $value*11;
+                margin-left: $value*6;
+                padding-right: $value*22;
                 border-right: 1px solid rgba(255, 255, 255, 0.26);
                 #put{
                     font-size: 14px;
                 }
             }
             .list2{
-                margin-top: 82px;
-                padding-left: 19px;
-                line-height: 26px;
+                margin-top: $value*10;
+                padding-left: $value*2;
+                line-height: $value*3;
                 border-right: 1px solid rgba(255, 255, 255, 0.26);
-                padding-right: 139px;
+                padding-right: $value*17;
                 ul{
                     li{
                         list-style: none;
@@ -366,39 +414,39 @@ body{
             }
             .contact{
                 color:rgba(255, 255, 255, 1);
-                padding-top: 82px;
-                padding-left: 22px;
+                padding-top: $value*10;
+                padding-left: $value*3;
                 #fb{
-                    padding-top: 18.5px;
-                    padding-right:20px;
+                    padding-top: $value*2;
+                    padding-right:$value*2;
                 }
                 #tw{
-                    padding-right: 17px;
+                    padding-right: $value*2;
                 }
                 #yt{
-                    padding-right: 18px;
+                    padding-right: $value*2;
                 }
             }
         }
         .end-child2{
-            margin-top: 33px;
+            margin-top: $value*4;
             color:rgba(255, 255, 255, 0.3);
-            padding-top: 25px;
-            padding-left: 65px;
+            padding-top: $value*3;
+            padding-left: $value*8;
             display: flex;
-            padding-bottom: 24px;
+            padding-bottom: $value*3;
             #private{
-                padding-left: 163px;
+                padding-left: $value*20;
                 color: rgba(255, 255, 255, 0.5);
 
             }
             #conditions{
-                padding-left: 67px;
+                padding-left: $value*8;
                 color: rgba(255, 255, 255, 0.5);
 
             }
             #powered{
-                padding-left: 152px;
+                padding-left: $value*19;
                 span{
                     color: rgba(255, 255, 255, 0.5);
                 }
@@ -418,6 +466,37 @@ body{
     }   
 
 
-
+    @media screen and (min-width: 1025px) {
+        .hamburger{
+            display: flex;
+        }
+    }
+    
+    @media screen and (min-width: 769px) and (max-width:1024px) {
+        .hamburger{
+            display: flex !important;
+        }
+        .listItem{
+            display: none !important;
+        }
+    }
+    
+    @media screen and (min-width: 481px) and (max-width:768px) {
+        .hamburger{
+            display: flex !important;
+        }
+        .listItem{
+            display: none !important;
+        }
+    }
+    
+    @media screen and (max-width:480px) {
+        .hamburger{
+            display: flex !important;
+        }
+        .listItem{
+            display: none !important;
+        }
+    }
 
 
