--- a/Nikola Rabrenovic - Praksa/DVG COMPANY SUBOTICA/scss/styles.scss
+++ b/Nikola Rabrenovic - Praksa/DVG COMPANY SUBOTICA/scss/styles.scss
@@ -8,6 +8,16 @@
     margin: 0px;
     padding: 0px;
 }
+
+:root{
+    --primary-color: rgba(217, 217, 217, 1);
+    --secondary-color:#212121;
+}
+.dark-theme{
+    --primary-color:#000106;
+    --secondary-color:rgba(217, 217, 217, 1);
+}
+
 html,
 body {
   position: relative;
@@ -15,25 +25,65 @@ body {
 }
 
 body {
-  background: #eee;
+  background: var(--primary-color);
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 14px;
-  color: #000;
+  color: --;
   margin: 0;
   padding: 0;
 }
 body{
     margin-left: auto;
         margin-right: auto;
-        width: 1440px;
         left: 0px;
         top: 0px;
     header{
         margin-left: auto;
         margin-right: auto;
-        width: 1440px;
         left: 0px;
         top: 0px;
+        #modalbox{
+            position: fixed;
+            top: 50%;
+            left:50%;
+            transform: translate(-50%,-50%);
+            width:80%;
+            max-width: 450px;
+            text-align: center;
+            padding:80px 60px;
+            font-size: 18px;
+            font-weight: 500;
+            background-color: burlywood;
+            border-radius: 8px;
+            display: none;
+            z-index: 1;
+            .close-icon{
+                width: 25px;
+                height: 25px;
+                position: absolute;
+                top: 25px;
+                right:25px;
+                cursor: pointer;
+            }
+            button{
+                background:brown;
+                color: wheat;
+                padding:15px;
+                border-radius: 4px;
+                font-size: 20px;
+                font-weight: 500;
+                width: 100%;
+                border:0;
+                outline:0;
+                margin-top: 50px;
+                cursor: pointer;
+                box-shadow: 0 10px 15px rgba(0,0,0,0.2);
+            }
+            .cookie{
+                width:100px;
+                margin-bottom: 15px;
+            }
+        }
         .firstDiv{
             background-color: rgba(217, 217, 217, 1);
             display: flex;
@@ -56,6 +106,10 @@ body{
                         color: rgba(89, 89, 89, 1);
                         text-decoration: underline;
                     }
+                    #icon{
+                        width:30px;
+                        cursor: pointer;
+                    }
                  }
             
         }
@@ -69,7 +123,8 @@ body{
                 margin-left: $value*13;
                 margin-right: $value*13;
                 li{
-                    border-left: 1px solid rgba(136, 135, 135, 0.4);
+                    color: var(--secondary-color);
+                    border-left: 1px solid var(--secondary-color);
                     padding-top:$value;
                     display: inline-block;
                     padding-left: $value*5;
@@ -77,7 +132,7 @@ body{
                         display: block;
                         font-size: 12px;
                         padding-bottom: $value;
-                        color:rgba(71, 71, 71, 1);
+                        color:var(--secondary-color);
                         ;
                     }
                     
@@ -113,6 +168,7 @@ body{
             margin-bottom: $value*9;
         }
         .dvg{
+            color: var(--secondary-color);
             margin-left: auto;
             margin-right: auto;
             font-size:$value*5;
@@ -123,6 +179,7 @@ body{
             margin-bottom: $value*3;
         }
         .dvg2{
+            color: var(--secondary-color);
             font-size: $value*4;
             font-family: 'Inter';
             margin-right: $value*21;
@@ -132,6 +189,7 @@ body{
 
         }
         .dvg3{
+            color: var(--secondary-color);
             margin-right: $value*19;
             margin-left: $value*7;
             margin-top: $value*7;
@@ -162,6 +220,7 @@ body{
             margin-left: $value*2;
         }
         p{
+            color: var(--secondary-color);
             font-size: 24px;
             font-family:'Roboto', sans-serif;
         }
@@ -171,11 +230,13 @@ body{
     }
     .numbers{
         h1{
+            color: var(--secondary-color);
             font-size: 42px;
             font-family:'Roboto', sans-serif;
             text-align: center;
         }
         .company2{
+            color: var(--secondary-color);
             font-size: 28px;
             text-align: center;
             margin-bottom: $value*4;
@@ -378,6 +439,7 @@ body{
         }
     .brands{
         p{
+            color: var(--secondary-color);
             font-size: 28px;
             font-weight: 400px;
             text-align: center;
@@ -490,18 +552,24 @@ body{
     }   
 
 
-    @media screen and (min-width: 1025px) {
+    @media screen and (min-width: 1024px) {
         .hamburger{
-            display: flex;
+            display: none;
+        }
+        #lista2{
+            display: none !important;
         }
     }
     
-    @media screen and (min-width: 769px) and (max-width:1024px) {
+    @media screen and (min-width: 769px) and (max-width:1023px) {
         .hamburger{
             display: flex !important;
         }
         .listItem{
             display: none !important;
+        }
+        #lista2{
+            display: none;
         }
     }
     
@@ -512,6 +580,9 @@ body{
         .listItem{
             display: none !important;
         }
+        #lista2{
+            display: none;
+        }
     }
     
     @media screen and (max-width:480px) {
@@ -520,6 +591,9 @@ body{
         }
         .listItem{
             display: none !important;
+        }
+        #lista2{
+            display: none;
         }
     }
 
